update code for prelogin

--- a/src/resources/stylesheets/abstracts/_variables.scss
+++ b/src/resources/stylesheets/abstracts/_variables.scss
@@ -2,7 +2,7 @@ $primary-font: Poppins;
 $text-color: white;
 
 
-
+w
 //button
 $button-watch-color:#6100C2;
 $button-submit-color:rgba(39, 245, 49, 0.8);
