update source code

--- a/src/resources/stylesheets/abstracts/_variables.scss
+++ b/src/resources/stylesheets/abstracts/_variables.scss
@@ -1,11 +1,9 @@
 $primary-font: Poppins;
 $text-color: white;
 
-
-w
 //button
-$button-watch-color:#6100C2;
-$button-submit-color:rgba(39, 245, 49, 0.8);
+$button-watch-color: #6100c2;
+$button-submit-color: rgba(39, 245, 49, 0.8);
 $button-active-color: #f61212;
 $btn-dark: #34495e;
 $btn-light: #ffffff;
@@ -16,6 +14,5 @@ $btn-info: #3498db;
 
 $bg-inactive: #fbe7e8;
 
-
-$backround-color-opacity:#230026;
-$background-left-nav: #21201E;
+$backround-color-opacity: #230026;
+$background-left-nav: #21201e;
