--- a/src/resources/stylesheets/abstracts/_variables.scss
+++ b/src/resources/stylesheets/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 $primary-font: Poppins;
 $text-color: white;
-
+$register-span: #fec340;
+$label-color: #919191;
 //button
 $button-watch-color: #6100c2;
 $button-submit-color: rgba(39, 245, 49, 0.8);
@@ -11,8 +12,9 @@ $btn-success: #0abf30;
 $btn-error: #e24d4c;
 $btn-warning: #e9bd0c;
 $btn-info: #3498db;
-
+$outline: #e5e5e5;
 $bg-inactive: #fbe7e8;
-
+$btnbg-color: #feaf00;
 $backround-color-opacity: #230026;
 $background-left-nav: #21201e;
+$li-hover: #ff6f28;
