style css for register form

--- a/src/resources/stylesheets/abstracts/_variables.scss
+++ b/src/resources/stylesheets/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $primary-font: Poppins;
 $text-color: white;
 $register-span: #fec340;
 $label-color: #919191;
+$backround-color: linear-gradient(to right, #feaf00, #f8d442);
 //button
 $button-watch-color: #6100c2;
 $button-submit-color: rgba(39, 245, 49, 0.8);
