--- a/src/resources/stylesheets/layouts/_prelogin.scss
+++ b/src/resources/stylesheets/layouts/_prelogin.scss
@@ -62,4 +62,98 @@
       }
     }
   }
+  .form-bottom-register {
+    margin: 1rem;
+    @include flex($direction: column, $justify: space-between, $align: left);
+    .form-register {
+      @include flex($direction: column, $justify: space-between, $align: left);
+      gap: 1rem;
+      input {
+        margin: 0;
+        outline: auto;
+        font-family: Montserrat;
+        outline-color: $outline;
+        padding: 1em;
+        width: 100%;
+        border: none;
+        border-radius: 0.25em;
+      }
+    }
+    .form-reset-pass {
+      margin-top: 1rem;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 17.07px;
+      text-align: left;
+      span {
+        color: $register-span;
+        text-decoration: underline;
+      }
+    }
+  }
+}
+.crud-form-register {
+  @include flex($direction: column, $justify: space-between, $align: center);
+  background-color: $btn-light;
+  border: 5px solid;
+  border-radius: 15px;
+  margin: 25% 30%;
+  .form-head-register {
+    .form-register-title {
+      margin: 10px;
+      @include flex(
+        $direction: column,
+        $justify: space-between,
+        $align: center
+      );
+      gap: 10px;
+      figure {
+        display: flex;
+        text-align: center;
+        position: relative;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      p {
+        margin: 0 1rem;
+      }
+      span {
+        margin: 0 3px;
+      }
+    }
+  }
+
+  .form-bottom-register {
+    margin: 1rem;
+    @include flex($direction: column, $justify: space-between, $align: left);
+    .form-register {
+      @include flex($direction: column, $justify: space-between, $align: left);
+      gap: 1rem;
+      input {
+        margin: 0;
+        outline: auto;
+        font-family: Montserrat;
+        outline-color: $outline;
+        padding: 1em;
+        width: 100%;
+        border: none;
+        border-radius: 0.25em;
+      }
+    }
+    .form-reset-pass {
+      margin-top: 1rem;
+      font-family: Montserrat;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 17.07px;
+      text-align: left;
+      span {
+        color: $register-span;
+        text-decoration: underline;
+      }
+    }
+  }
 }
